--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -6,6 +6,34 @@
     "suggest.echodocSupport": true,
     // "diagnostic.displayByAle": true,
 
+    "suggest.completionItemKindLabels": {
+        "keyword": "\uf1de",
+        "variable": "\ue79b",
+        "value": "\uf89f",
+        "operator": "\u03a8",
+        "function": "\u2A15",
+        "reference": "\ufa46",
+        "constant": "\uf8fe",
+        "method": "\uf09a",
+        "struct": "\ufb44",
+        "class": "\uf0e8",
+        "interface": "\uf417",
+        "text": "\u2663",
+        "enum": "\uf435",
+        "enumMember": "\uf02b",
+        "module": "\uf530",
+        "color": "\ue22b",
+        "property": "\ue624",
+        "field": "\uf6a6",
+        "unit": "\uf475",
+        "event": "\ufacd",
+        "file": "\uf723",
+        "folder": "\uf114",
+        "snippet": "\ue60b",
+        "typeParameter": "\uf728",
+        "default": "\uf29c"
+    },
+
     //git
     "git.enableGutters": true,
     "git.branchCharacter":"\uf408",
