--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,7 +4,7 @@
     "coc.preferences.colorSupport": false,
     "suggest.enablePreview": false,
     "suggest.echodocSupport": true,
-    // "diagnostic.displayByAle": true,
+	"suggest.minTriggerInputLength": 2,
 
     "suggest.completionItemKindLabels": {
         "keyword": "\uf1de",
@@ -60,16 +60,5 @@
             "filetypes": ["c", "cpp", "objc", "objcpp"]
         }
     },
-
-    // coc-snippets config
-    "snippets.extends": {
-    "cpp": ["c"],
-    "javascriptreact": ["javascript"],
-    "typescript": ["javascript"]
-    },
-
-    "snippets.ultisnips.directories": [
-    "UltiSnips"
-    ],
 
 }
