--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,7 +4,7 @@
     "coc.preferences.colorSupport": false,
     "suggest.enablePreview": false,
     "suggest.echodocSupport": true,
-	"suggest.minTriggerInputLength": 2,
+    "suggest.minTriggerInputLength": 2,
     "suggest.snippetIndicator": "    ",
 
     "suggest.completionItemKindLabels": {
@@ -52,4 +52,5 @@
     "git.topRemovedSign.text": "▔",
     "git.changeRemovedSign.text": "▋",
 
+    "clangd.disableDiagnostics":true
 }
