--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,8 +1,7 @@
 {
-    // update funtion symbol for statusline
     "coc.preferences.currentFunctionSymbolAutoUpdate": true,
     "coc.preferences.colorSupport": false,
-    "suggest.enablePreview": false,
+    "suggest.enablePreview": true,
     "suggest.echodocSupport": true,
     "suggest.minTriggerInputLength": 2,
     "suggest.snippetIndicator": "    ",
@@ -35,7 +34,6 @@
         "default": "\uf29c"
     },
 
-    //git
     "git.enableGutters": true,
     "git.branchCharacter":"\uf408",
     "git.addGBlameToBufferVar": true,
