disable snipmate stype snipps

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -50,5 +50,7 @@
     "git.topRemovedSign.text": "▔",
     "git.changeRemovedSign.text": "▋",
 
-    "clangd.disableDiagnostics":true
+    "clangd.disableDiagnostics":true,
+
+    "snippets.snipmate.enable":false
 }
