Fix jump to next snippet holder always be quote

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -51,6 +51,7 @@
     "git.changeRemovedSign.text": "▋",
 
     "clangd.disableDiagnostics":true,
+    "clangd.disableSnippetCompletion":true,
 
     "snippets.snipmate.enable":false
 }
