1, add lua lsp setting; 2, true color set

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -34,6 +34,13 @@
         "default": "\uf29c"
     },
 
+    "languageserver": {
+        "lua": {
+            "command": "lua-lsp",
+            "filetypes": ["lua"]
+        }
+    },
+
     "git.enableGutters": true,
     "git.branchCharacter":"\uf408",
     "git.addGBlameToBufferVar": true,
